# hyperparameter_optimization

./: .gitignore  CMakeLists.txt  NN_Architectures.py  README.md  package.xml  setup.py
BASE/: DatasetBaseClass.py  LightningModuleBaseClass.py  Model.py  NN_Architectures.py  optimize_learned_model.py  profile.py
bellows_grub/: BellowsGrub.py  BellowsGrub_LearnedModel.py  bellows_grub_dynamics.cpp  bellows_grub_dynamics.h  control_test.ipynb  grub_nempc.py  grub_optimize.py  open_loop_test.py
bellows_grub/run_logs/fnn_lhs_final/train_595eaec2_135_accuracy_tolerance=0.0100,act_fn=sigmoid,b_size=16,cpu_num=7,dataset_size=100000,dt=0.0100,generate_new_data=Fa_2023-07-06_22-51-26/: params.json  params.pkl  progress.csv  result.json
bellows_grub/run_logs/fnn_lhs_final/train_849897e4_138_accuracy_tolerance=0.0100,act_fn=sigmoid,b_size=16,cpu_num=7,dataset_size=100000,dt=0.0100,generate_new_data=Fa_2023-07-07_09-28-24/: params.json  params.pkl  progress.csv  result.json
inverted_pendulum/: InvertedPendulum.py  InvertedPendulumLightning.py  NN_Architectures.py  control_test.ipynb  ip_LearnedModel.py  ip_config.py  ip_dataset.py  ip_nempc.py  ip_optimize.py  ip_train.py  train_ip_data.json  validation_ip_data.json
lightning_logs/version_1/: hparams.yaml
lightning_logs/version_1/checkpoints/: epoch=499-step=1875000.ckpt
panda/: CMakeLists.txt  package.xml  setup.py  simple_env.py  test.py
panda/launch/: panda.launch
panda/scripts/: simple_env.py  test.py
(+4 files in other folders)
